--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,51 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #dadada;
   font-size: 10px;
+}
+
+div {
+  background-color: #dadada;
+  float: left;
+  margin: 1% 0;
+  width: 100%;
+  padding: 20px 25px;
+}
+
+.medium-pic {
+  width: 70%;
+}
+
+/* Container holding the image and the text */
+.container {
+  margin: 10px auto;
+  width: 90%;
+  position: relative;
+  text-align: center;
+  color: black;
+}
+
+/* Top left text */
+.top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+
+/* code added to create two-column design */
+@media screen and (min-width: 575px){
+   div {
+    margin: 1%;
+    width: 48%;
+  }
+
+
+  /* code added to create four-column design */
+@media screen and (min-width: 991px){
+   div {
+    margin: .50%;
+    width: 24%;
+  }
 }
