--- a/css/style.css
+++ b/css/style.css
@@ -20,36 +20,8 @@ body {
   width: 90%;
 }
 
-.flex-container {
-  padding: 0;
-  margin: 0;
-  list-style: column;
-
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-
-  -webkit-flex-flow: row wrap;
-  justify-content: space-around;
-}
-
-.flex-item {
-  background: tomato;
-  padding: 5px;
-  width: 200px;
-  height: 150px;
-  margin-top: 10px;
-
-  line-height: 150px;
-  color: white;
-  font-weight: bold;
-  font-size: 3em;
-  text-align: center;
-}
-
 .preview {
+  display: inline-block;
   background-color: #dadada;
   float: left;
   margin: 1% 0;
